Added comments to product

--- a/simple_shop/products/templates/product/base.html
+++ b/simple_shop/products/templates/product/base.html
@@ -5,6 +5,7 @@
     <title>Simle shop - {% block title %}{% endblock %}</title>
 </head>
 <body>
+    {% block breadcrumbs %}{% endblock %}
     {% block content %}{% endblock %}
 </body>
 </html>
