--- a/simple_shop/products/templates/product/detail.html
+++ b/simple_shop/products/templates/product/detail.html
@@ -10,7 +10,7 @@
 
 {% block content %}
     <h1>{{ product.name }} - {{ product.price }}</h1>
-    Likes: {{ product.likes }} |
+    Likes: {{ product.likes_count }} |
     {% if user.is_authenticated %}
         <a href="{% url 'products:like' product.slug %}">Like</a>
     {% else %}
